Fix action icon (dot icon) visibility.

--- a/apps/test-app/app/sandbox.module.css
+++ b/apps/test-app/app/sandbox.module.css
@@ -154,6 +154,8 @@
 }
 
 .actionIcon {
+	position: relative;
+
 	display: flex;
 	align-items: center;
 	justify-content: center;
